2002/07/17 niteria
Fixed Bug 582793: Menu Ressources: \hear(t)suit

2002/07/15 niteria
- Fixed Bug 581758: Tools: English Popup without set placeholders

2002/07/12 niteria
- Fixed Small Bug 580489: Spelling error in dialog

2002/07/12 christianwelzel
- Implemented Feature 535144: Specifying Output Profile in TeX file
  The last used output-profile will be saved in the tcp-file.

2002/07/09 svenwiegand
- Updated version ids in ressources.

2002/07/09 niteria
- Implemented Feature 578630: Opening BibTeX files

2002/07/05 niteria
- Implemented Feature 577600: New Placeholder for better forward search
  (%wm and %wc togther with slash and short versions)
- Output Wizard now uses these new placeholders for forward search and Compiling to dvi.
  This fixes Bug 577238 even more... ;-))
- Fixed Bug 577756: Variiertes Sigma inserts \sigma

2002/07/04 svenwiegand
- Implemented Feature 539143: Save New Document after Creation
  The options page 'File' has got a new option 'Save new documents immediately'. 
  If checked, the 'Save As' dialog box will popup directly, after the users has 
  created a new document via the 'File|New' or 'File|New from Template...' 
  command.

2002/07/04 niteria
- Fixed Bug 577238: Src-Specials mixed up
- Fixed Bug 577237: Graphic files not found by Parser
- Implemented Feature 577240: Parser informs about found graphic files
- New Dialog for defining placeholders for sets of files. This simplifies the
  menu for the placeholders in "Options | Clean". The placeholder menu for the
  Tools is still waiting to be simplified.

2002/07/01 svenwiegand
- Fixed Bug: Single quotes (') after a word were interpreted as a character 
  of the word from CLatexParser::NextWord(). This made the spell checker 
  mark this as a spelling error.
- Feature 540886: Remove error marker when editing a line. Fixed it in another
  way: All error marks will be removed, when a new compilation is about to
  be started.